--- a/wercker.yml
+++ b/wercker.yml
@@ -22,6 +22,10 @@ build:
                 echo -p "gem list: $(gem list)"
 
         - script:
+            name: run rubocop
+            code: bundle exec rubocop
+
+        - script:
             name: run minitest
             code: bundle exec rake test
 
